[package]
name = "dockyard"
description = "Monorepo managment tool"
authors = ["Aleksandr Khamutov"]
version = "0.0.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.38", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
